# poet-exclusive-groups-plugin

./: .gitignore  LICENSE  README.md  pyproject.toml
poet_exclusive_groups_plugin/: plugin.py
poet_plugin/: plugin.py
